tests/specs/ecosystem/sxzz/magic_string_ast/0_5_0.test
sxzz/magic-string-ast/0.5.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@babel/types@^7.24.0": "npm:@babel/types@7.24.5",
      "npm:magic-string@^0.30.9": "npm:magic-string@0.30.10"
    },
    "npm": {
      "@babel/helper-string-parser@7.24.1": {
        "integrity": "sha512-2ofRCjnnA9y+wk8b9IAREroeUP02KHp431N2mhKniy2yKIDKpbrHv9eXwm8cBeWQYcJmzv5qKCu65P47eCF7CQ==",
        "dependencies": {}
      },
      "@babel/helper-validator-identifier@7.24.5": {
        "integrity": "sha512-3q93SSKX2TWCG30M2G2kwaKeTYgEUp5Snjuj8qm729SObL6nbtUldAi37qbxkD5gg3xnBio+f9nqpSepGZMvxA==",
        "dependencies": {}
      },
      "@babel/types@7.24.5": {
        "integrity": "sha512-6mQNsaLeXTw0nxYUYu+NSa4Hx4BlF1x1x8/PMFbiR+GBSr+2DkECc69b8hgy2frEodNcvPffeH8YfWd3LI6jhQ==",
        "dependencies": {
          "@babel/helper-string-parser": "@babel/helper-string-parser@7.24.1",
          "@babel/helper-validator-identifier": "@babel/helper-validator-identifier@7.24.5",
          "to-fast-properties": "to-fast-properties@2.0.0"
        }
      },
      "@jridgewell/sourcemap-codec@1.4.15": {
        "integrity": "sha512-eF2rxCRulEKXHTRiDrDy6erMYWqNw4LPdQ8UQA4huuxaQsVeRPFl2oM8oDGxMFhJUWZf9McpLtJasDDZb/Bpeg==",
        "dependencies": {}
      },
      "magic-string@0.30.10": {
        "integrity": "sha512-iIRwTIf0QKV3UAnYK4PU8uiEc4SRh5jX0mwpIwETPpHdhVM4f53RSwS/vXvN1JhGX+Cs7B8qIq3d6AH49O5fAQ==",
        "dependencies": {
          "@jridgewell/sourcemap-codec": "@jridgewell/sourcemap-codec@1.4.15"
        }
      },
      "to-fast-properties@2.0.0": {
        "integrity": "sha512-/OaKK0xYrs3DmxRYqL/yDc+FxFUVYhDlXMhRmv3z915w2HF1tnN1omB354j8VUGO/hbRzyD6Y3sA7v7GS/ceog==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2430 [ERROR]: Interface 'MagicStringAST' incorrectly extends interface 'MagicString'.
  The types returned by 'clone()' are incompatible between these types.
    Type 'MagicStringAST' is not assignable to type 'this'.
      'MagicStringAST' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'MagicStringAST'.
export interface MagicStringAST extends MagicString {
                 ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:5:18

TS2416 [ERROR]: Property 'clone' in type 'MagicStringAST' is not assignable to the same property in base type 'MagicString'.
  Type '() => MagicStringAST' is not assignable to type '() => this'.
    Type 'MagicStringAST' is not assignable to type 'this'.
      'MagicStringAST' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'MagicStringAST'.
  clone(): MagicStringAST {
  ~~~~~
    at file://<tmpdir>/src/index.ts:39:3

Found 2 errors.

error: Type checking failed.

